contact shift repaired, name different color, transition buttons

--- a/src/assets/sass/_app.scss
+++ b/src/assets/sass/_app.scss
@@ -1,7 +1,10 @@
+html {
+    overflow-y: scroll;
+}
+
 #app {
     font-family: $montserrat;
     margin: 0;
-    padding: 0;
     color: $text-grey;
 
     h1 {
