--- a/src/assets/sass/base/_variables.scss
+++ b/src/assets/sass/base/_variables.scss
@@ -7,6 +7,6 @@ $montserrat: 'Montserrat', sans-serif;
 
 $nav-blue: #00B8DB;
 $text-grey: #3A4655;
-// $headline-blue: #007398;
 $headline-blue: #005477;
+$name-blue: #152c35;
 $white: #FFFFFF;
