--- a/src/assets/sass/components/_navigation.scss
+++ b/src/assets/sass/components/_navigation.scss
@@ -11,7 +11,7 @@
 
     .navigation a {
         @media screen and (min-width: 992px) {
-            border: 1px solid $headline-blue;
+            border: 1px solid $nav-blue;
             border-radius: 10px;  
             margin-left: 10px;
             color: $white;
@@ -27,6 +27,10 @@
             padding: 6px 10px;
             font-size: 14px;
             color: $white;
+            -webkit-transition: all 0.3s ease;
+            -moz-transition: all 0.3s ease;
+            -o-transition: all 0.3s ease;
+            transition: all 0.3s ease;
         }
         
         &:hover {
@@ -56,13 +60,11 @@
     }
 
     button.navbar-toggler {
-        // border-radius: 10px;
         outline: none;
         border: none;
 
         &:hover {
             border: none;
-            // border-color: rgba(255, 255, 255, 0.3);
         }
     }
 
@@ -92,7 +94,7 @@
     }
 
     .name {
-        color: $headline-blue;
+        color: $name-blue;
     }
 
     .nav-container {
